--- a/Phone-Slider-Selector/BadUIPhone.html
+++ b/Phone-Slider-Selector/BadUIPhone.html
@@ -1,6 +1,15 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GT9SGNE9P7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'G-GT9SGNE9P7');
+    </script>
 </head>
 <body>
     <h1>Bad UI Battle</h1>
