--- a/Phone-Slider-Selector/BadUIPhone.html
+++ b/Phone-Slider-Selector/BadUIPhone.html
@@ -7,9 +7,10 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        
         gtag('config', 'G-GT9SGNE9P7');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4885726053170676"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Bad UI Battle</h1>
