--- a/Date/BadUIDate.html
+++ b/Date/BadUIDate.html
@@ -1,15 +1,17 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Bad UIDate</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GT9SGNE9P7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        
         gtag('config', 'G-GT9SGNE9P7');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4885726053170676"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Bad UI Battle</h1>
