apply default layout to all pages

--- a/Phone-Slider-Selector/BadUIPhone.html
+++ b/Phone-Slider-Selector/BadUIPhone.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1><a href="index.html">Bad UI</a> Battles</h1>
+    <h1>Check out <a href="./..">More Bad UI</a> samples</h1>
     <form>
         <h3>Bad Phone Selector</h3>
         <div>Phone: <span id="phoneDisplay">(30) 339-669-214 </span></div>
